--- a/style.css
+++ b/style.css
@@ -6,3 +6,209 @@
     box-sizing: border-box;
     text-decoration: none;
 }
+
+.topo {
+    width: 100%;
+    position: fixed;
+    z-index: 1;   
+    background-color: #604829;
+}
+.secao-topo{
+    height: 80px;
+    position: relative;
+}
+.topo img {
+    width: 100px;
+    position: absolute;
+    left: 15%;
+    top: -10px;
+
+    
+}
+.topo p {
+    font-family:'Oswald', sans-serif; 
+    font-size: 18px;
+    position: absolute;
+    top: 35%;
+    right: 15%;
+    
+        
+}
+
+.topo p a {
+    margin-left: 20px;
+    color: #c4a47c;
+    text-shadow: 3px 3px black;
+    
+}
+
+.banner-topo{
+    height: 100vh;
+    background-image: url(img/parallax-imagem1.png);
+    position: relative;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+h1{
+    font-family: 'Fraunces', serif;
+    font-size: 100px;
+    font-weight: normal;
+    color: white;
+    position: absolute;
+    top: 45%;
+    right: 0;
+    left: 50px;
+    
+}
+.secao-informacoes{
+    width: 100%;
+    padding: 80px 0;
+    text-align: center;
+}
+.texto{
+    padding: 80px 80px;
+    font-size: 16px;
+    line-height: 34px;
+    text-align: center;
+    color: #666;
+}
+.texto h2{
+    font-family: 'Oswald', sans-serif;
+    font-size: 18px;
+    color: #c4a47c;
+    margin-bottom: 20px;
+}
+.texto p{
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    padding: 0px 20px;
+    max-width: 1024px;
+    
+    
+}
+.parallax2,.parallax3,.parallax4 {
+   position: relative;
+   background-position: center;
+   background-size: cover;
+   background-attachment: fixed;
+}
+
+.parallax2{
+    background-image: url(img/parallax-imagem2.jpg);
+    height: 50vh;
+}
+.parallax2  h3{
+    background-color: #604829;
+    color: white;
+    font-family: 'Fraunces', serif; 
+    font-size: 24px;
+    width: 500px;
+    padding: 10px;
+    text-align: center;
+    position: absolute;
+    top: 45%;
+    left: 35%;
+}
+.parallax3{
+    background-image: url(img/parallax-imagem3.jpg);
+    height: 50vh;
+}
+.parallax3 h3{
+    background-color: #604829;
+    color: white;
+    font-family: 'Fraunces', serif; 
+    font-size: 24px;
+    width: 500px;
+    padding: 10px;
+    text-align: center;
+    position: absolute;
+    top: 45%;
+    left: 35%;
+
+}
+.parallax4{
+    background-image: url(img/parallax-imagem4.png);
+    height: 100vh;
+}
+.parallax4 h2{
+    width: 500px;
+    padding: 10px;
+    background-color: #604829;
+    font-family:'Oswald', sans-serif; 
+    font-size: 24px;
+    color: white;
+    text-align: center;
+    position: absolute;
+    top: 10%;
+    right: 0;
+    left: 35%;
+
+}
+
+iframe{
+    width: 1024px;
+    height: 450px;
+    position: absolute;
+    top: 23%;
+    left: 20%;
+    right: 0;
+   
+ 
+}
+.box-contatos{
+    width: 500px;
+    padding: 10px;
+    background-color: #604829;
+    color: white;
+    font-family:'Oswald', sans-serif; 
+    font-size: 16px;
+    text-align: center;
+    position: absolute;
+    bottom:8%;
+    right: 0;
+    left: 35%;
+
+}
+
+.secao-horarios{
+    background-image: url(img/cafeteria.jpg);
+    height: 85vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+}
+.secao-horarios h2{
+    font-family: 'Oswald', sans-serif;
+    font-size: 18px;
+    color: white;
+    position: absolute;
+    top: 20%;
+    left: 43%;
+}
+
+.lista li { /* itens da lista */
+    position: relative;
+}
+.lista li h3{
+    color: white;
+}
+
+.lista li div { /* tarja */
+    width: 70%;
+    height: 1px;
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: 50%;
+    background-color: #acacac
+}
+
+.lista li p { /* parágrafos */
+    position: absolute;
+    top: 0;
+    right: 0;
+
+}
