--- a/style.css
+++ b/style.css
@@ -59,19 +59,21 @@ h1{
     top: 45%;
     right: 0;
     left: 50px;
+   
     
 }
 .secao-informacoes{
     width: 100%;
     padding: 80px 0;
-    text-align: center;
+   
 }
 .texto{
     padding: 80px 80px;
     font-size: 16px;
-    line-height: 34px;
     text-align: center;
+    line-height: 34px;
     color: #666;
+    margin: 0 auto;
 }
 .texto h2{
     font-family: 'Oswald', sans-serif;
@@ -84,6 +86,7 @@ h1{
     font-size: 16px;
     padding: 0px 20px;
     max-width: 1024px;
+    margin: 0 auto;
     
     
 }
@@ -97,6 +100,7 @@ h1{
 .parallax2{
     background-image: url(img/parallax-imagem2.jpg);
     height: 50vh;
+    margin: 0 auto;
 }
 .parallax2  h3{
     background-color: #604829;
@@ -130,6 +134,9 @@ h1{
 .parallax4{
     background-image: url(img/parallax-imagem4.png);
     height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .parallax4 h2{
     width: 500px;
@@ -149,10 +156,11 @@ h1{
 iframe{
     width: 1024px;
     height: 450px;
-    position: absolute;
+    /*position: absolute;
     top: 23%;
     left: 20%;
-    right: 0;
+    right: 0;*/
+    margin: 0 auto;
    
  
 }
@@ -168,6 +176,7 @@ iframe{
     bottom:8%;
     right: 0;
     left: 35%;
+  
 
 }
 
@@ -179,6 +188,7 @@ iframe{
     background-size: cover;
     background-attachment: fixed;
     position: relative;
+   
 }
 .secao-horarios h2{
     font-family: 'Oswald', sans-serif;
@@ -191,6 +201,7 @@ iframe{
 
 .lista li { /* itens da lista */
     position: relative;
+    
 }
 .lista li h3{
     color: white;
