--- a/style.css
+++ b/style.css
@@ -45,22 +45,30 @@
 .banner-topo{
     height: 100vh;
     background-image: url(img/parallax-imagem1.png);
-    position: relative;
+    /*position: relative;
     background-position: center;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: fixed;*/
+    display: flex;
+    justify-content: center;
+   
 }
 h1{
     font-family: 'Fraunces', serif;
     font-size: 100px;
     font-weight: normal;
     color: white;
-    position: absolute;
+   /* position: absolute;
     top: 45%;
     right: 0;
-    left: 50px;
+    left: 50px;*/
    
     
+}
+.parallax1{
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 .secao-informacoes{
     width: 100%;
