--- a/style.css
+++ b/style.css
@@ -9,21 +9,43 @@
 
 .topo {
     width: 100%;
+    height: 100px;
     position: fixed;
     z-index: 1;   
     background-color: #604829;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
 }
-.secao-topo{
-    height: 80px;
-    position: relative;
-}
-.topo img {
-    width: 100px;
-    position: absolute;
-    left: 15%;
-    top: -10px;
 
+.secao-topo{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    width: 100px;
+    width: 285px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     
+} 
+.logo img{
+    width: 100px;
+    height: 100px;
+}
+.secao-links{
+  width: 385px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 .topo p {
     font-family:'Oswald', sans-serif; 
@@ -45,10 +67,10 @@
 .banner-topo{
     height: 100vh;
     background-image: url(img/parallax-imagem1.png);
-    /*position: relative;
+    position: relative;
     background-position: center;
     background-size: cover;
-    background-attachment: fixed;*/
+    background-attachment: fixed;
     display: flex;
     justify-content: center;
    
@@ -62,6 +84,7 @@ h1{
     top: 45%;
     right: 0;
     left: 50px;*/
+  
    
     
 }
@@ -109,6 +132,8 @@ h1{
     background-image: url(img/parallax-imagem2.jpg);
     height: 50vh;
     margin: 0 auto;
+    display: flex;
+    
 }
 .parallax2  h3{
     background-color: #604829;
@@ -144,7 +169,8 @@ h1{
     height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: center;
+    
+
 }
 .parallax4 h2{
     width: 500px;
@@ -169,6 +195,7 @@ iframe{
     left: 20%;
     right: 0;*/
     margin: 0 auto;
+    
    
  
 }
